# conciso-kickstarter-python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  docker-compose.yaml  hire.sh  readme.md  token.sh
doc/: arc42.md  kickstarter.md  seq_hire.txt
doc/plant_uml/: class_fachlogik.txt  class_webanwendung.txt  component_kickstarter.txt  context_anwendung.txt  context_anwendung_techn.txt  deploy_kickstarter.txt  fachliches_modell.txt  usecase_anwendung.txt
doc/templates/: template.md
docker/: Dockerfile  export-openapi.sh  start.sh
docker/keycloak/data/import/: skillprofil-realm.json
kickstarter/: manage.py  openapi.yaml
kickstarter/kickstarter/: asgi.py  settings.py  wsgi.py
kickstarter/skillprofil/: apps.py
kickstarter/skillprofil/domain/auth/: authentication.py
kickstarter/skillprofil/domain/authorization/: skillprofil_permission.py  skillprofil_user.py
kickstarter/skillprofil/domain/human_ressources/: human_ressources.py  human_ressources_persistance.py
kickstarter/skillprofil/interfaces/: urls.py
kickstarter/skillprofil/interfaces/person/: person_view.py
kickstarter/skillprofil/migrations/: 0002_alter_person_unique_together.py
kickstarter_business_logic/: LICENSE  README.md  pyproject.toml
kickstarter_business_logic/src/kickstarter_business_logic/human_ressources/: human_ressource_types.py  human_ressources.py  ihuman_ressources.py
requirements/: develop.txt  production.txt
