[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kickstarter_business_logic"
version = "0.0.1"
authors = [
  { name="Philipp Kroll", email="philipp.kroll@example.com" },
]
description = "This Package contains all the Business Logic for the Kickstarterproject."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/Philipp-Co/conciso-kickstarter-python/"
Issues = "https://github.com/Philipp-Co/conciso-kickstarter-python/issues/"
